<resources>
    <string name="app_name">SportUpX</string>
    <string name="let_s_play">Let\'s Play</string>
    <string name="welcome_message">Welcome to SportUpX ! We’re glad you have decided to join us. By Continuing, you accept SportUpX\'s T&amp;C</string>
    <string name="have_a_referral_code">Have a referral code?</string>
    <string name="enter_a_code">Enter a code</string>
    <string name="already_a_user">Already a user?</string>
    <string name="log_in">Log in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">323897300020781</string>
    <string name="fb_login_protocol_scheme">fb323897300020781</string>
    <string name="facebook_client_token">e2ef0cf1c1923c3b230efe65ec7fde4e</string>

    <string name="by_joining_this">By Joining this contest, you accept SportUpX\'s T&amp;C and confirm that you are not a resident of Assam, Odisha, Telangana, Nagaland or Sikkim.</string>
    <string name="MinimumWithdrawAmountLimit">500</string>
    <string name="sign_in">SignIn</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="sign_up">Sign up</string>
    <string name="terms_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="hundered">100</string>
    <string name="two_hundred">200</string>
    <string name="five_hundred">500</string>
    <string name="add_cash_head">ADD CASH</string>
    <string name="enter_valid_amt">Enter Valid Amount</string>
    <string name="enter_min_amt">Enter minimum  Amount is 10</string>
    <string name="wk">Wicket Keeper</string>
    <string name="batsman">Batsman</string>
    <string name="all_rounder">All Rounder</string>
    <string name="bowler">Bowler</string>
    <string name="c_vc"><![CDATA[CHOOSE C & VC]]></string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="India">India</string>
    <string name="ur_global_rank">YOUR GLOBAL RANKING</string>
    <string name="ur_invited_frnds">YOUR INVITED FRIENDS</string>
    <string name="invite_frnds">INVITE FRIENDS</string>
    <string name="join_contest">JOIN CONTEST</string>
    <string name="my_teams">MY TEAMS</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="pymnt_opt">PAYMENT OPTION</string>
    <string name="pymnt_options">PAYMENT OPTION</string>
    <string name="invite_frnds_to_contact">INVITE FRIENDS TO CONTEST</string>
    <string name="select_winning_breakup">Select Winning Breakup</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="new_pass">NEW PASSWORD</string>
    <string name="as_on_pan">As on pan card</string>
    <string name="verify_pan">VERIFY YOUR PAN</string>
    <string name="pan_no">PAN Number</string>
    <string name="ten_digit_pan_no">10 Digit pan no.</string>
    <string name="as_on_adhar_card">As on aadhaar card</string>
    <string name="verify_adhar">VERIFY YOUR AADHAAR</string>
    <string name="adhar_no">Aadhaar Number</string>
    <string name="ten_digit_adhar_no">10 Digit aadhaar no.</string>
    <string name="pls_select_img">Please select image</string>
    <string name="pls_enter_name">Please Enter Name</string>
    <string name="pls_enter_doc_num">Please Enter Document Number</string>
    <string name="pls_enter_dob">Please Enter Date Of Birth</string>
    <string name="pls_enter_state_name">Please Enter State Name</string>
    <string name="withdraw_amt">WITHDRAW AMOUNT</string>
    <string name="contest">CONTESTS</string>
    <string name="match_not_started">Please Wait! Match has not started yet.</string>
    <string name="fixture">FIXTURES</string>
    <string name="live">LIVE</string>
    <string name="result">RESULTS</string>
    <string name="invite_code">Invite Code</string>
    <string name="my_team">My Team</string>
    <string name="my_recent_transactions">My Recent Transactions</string>
    <string name="update_your_kyc_document_for_withdraw_amount">Update your KYC document for withdraw amount.</string>
    <string name="know_your_customer">Know Your Customer</string>
    <string name="upload">Upload</string>
    <string name="pan_card">PAN CARD</string>
    <string name="aadhaar_card">AADHAAR CARD</string>
    <string name="add_remove_cards_wallets_etc">Add/remove cards,wallets, etc.</string>
    <string name="manage_payments">Manage Payments</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="bonus">BONUS</string>
    <string name="winnings">WINNINGS</string>
    <string name="deposited">DEPOSITED</string>
    <string name="add_balance">ADD BALANCE</string>
    <string name="deposited_winnings">DEPOSITED + WINNINGS</string>
    <string name="total_balance">TOTAL BALANCE</string>
    <string name="total_winnings">TOTAL WINNINGS</string>
    <string name="entry_fee">ENTRY FEE</string>
    <string name="free">Free</string>
    <string name="joined_with">JOINED WITH</string>
    <string name="team_1">Team 1</string>
    <string name="invite_friends_in_this_contest">Invite Friends in this Contest</string>
    <string name="invite">Invite</string>
    <string name="no_live_contest_joined">No Live Contest Joined</string>
    <string name="edit">Edit</string>
    <string name="preview">Preview</string>
    <string name="player_role">Player Role</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="c_gets_2x_points_amp_vc_gets_1_5x_points"><![CDATA[© Gets 2X Points & (VC) Gets 1.5X Points]]></string>
    <string name="choose_captain">Choose Captain</string>
    <string name="c">©</string>
    <string name="vc">(VC)</string>
    <string name="amp_vice_captain"><![CDATA[& Vice Captain]]></string>
    <string name="by_registering_i_agree_to_my11team_s">By registering, I agree to 11Dreamer\'s</string>
    <string name="not_avil_demo">This payment mode is not available on Demo Version</string>
    <string name="cricket">Cricket</string>
    <string name="my_matches">My Matches</string>
    <string name="upcoming_matches">Upcoming Matches</string>

</resources>
