<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_launcher" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <com.loopeer.shadow.ShadowView
                android:id="@+id/shadow_view"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentBottom="true"
                android:foreground="?attr/selectableItemBackground"
                app:backgroundColor="@color/colorPrimary"
                app:shadowColor="@color/colorPrimaryDark"
                app:cornerRadiusTL="25dp"
                app:cornerRadiusTR="25dp">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="50dp"
                        android:gravity="top"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Welcome"
                                android:visibility="visible"
                                android:textSize="28dp"
                                android:textColor="@color/white"
                                android:textStyle="bold"/>
                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="6dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:visibility="visible"
                                android:textSize="16dp"
                                android:textColor="@color/white"
                                android:text="@string/welcome_message"/>
                        </LinearLayout>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:gravity="bottom"
                        android:layout_weight="1"
                        android:clipChildren="false"
                        android:clipToPadding="false">

                        <net.orandja.shadowlayout.ShadowLayout
                            android:id="@+id/tv_LetsPlay_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/white_rectangle"
                            app:shadow_radius="8"
                            app:shadow_x_shift="-1dp"
                            app:shadow_y_shift="2dp"
                            app:shadow_downscale="2"
                            app:shadow_color="@color/white"
                            app:shadow_with_color="false"
                            app:shadow_with_dpi_scale="true"
                            app:shadow_with_css_scale="true"
                            app:shadow_cast_only_background="false"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="25dp">

                            <TextView
                                android:id="@+id/tv_LetsPlay"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:elevation="3dp"
                                android:gravity="center"
                                android:padding="12dp"
                                android:text="@string/let_s_play"
                                android:textAlignment="center"
                                android:textColor="@color/lets_play"
                                android:textSize="16sp" />

                        </net.orandja.shadowlayout.ShadowLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_LetsPlay_layout"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="20dp">

                            <LinearLayout
                                android:id="@+id/LL_StartSignUp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/have_a_referral_code"
                                    android:textColor="@color/white" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/enter_a_code"
                                    android:textColor="@color/white"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/LL_StartLogin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/already_a_user"
                                    android:textColor="@color/white" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="end"
                                    android:text="@string/log_in"
                                    android:textColor="@color/white"
                                    android:textStyle="bold" />
                            </LinearLayout>


                        </RelativeLayout>


                    </RelativeLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.loopeer.shadow.ShadowView>
        </RelativeLayout>


    </LinearLayout>
</layout>