<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/activity_mainheader"
        android:id="@+id/head"/>
    <include layout="@layout/layout_vs_back"
        android:id="@+id/incl_vs_bck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/incl_vs_bck">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/dark_rectangle_contest"
                android:elevation="2dp"
                android:id="@+id/Rl_ContestDetails"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"

                            android:layout_margin="10dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_winnings"
                                android:textSize="13sp"
                                android:textColor="@color/colorPrimary"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹ 0"
                                android:id="@+id/tv_TotalWinning"
                                android:layout_marginTop="2dp"
                                android:textSize="14sp"
                                android:textColor="@color/textColor"
                                android:textStyle="bold"/>
                        </LinearLayout>
                        <View
                            android:layout_width="1dp"
                            android:layout_gravity="center"
                            android:layout_height="match_parent"
                            android:background="@drawable/divider_dotted"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/entry_fee"
                                android:textSize="13sp"
                                android:textColor="@color/colorPrimary"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/free"
                                android:layout_marginTop="2dp"
                                android:id="@+id/tv_EntryFess"
                                android:textSize="14sp"
                                android:textColor="@color/textColor"
                                android:textStyle="bold"/>
                        </LinearLayout>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/divider_horizo_ct"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="2"
                            android:orientation="horizontal">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/joined_with"
                                    android:textSize="13sp"
                                    android:textColor="@color/colorPrimary"
                                    />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/team_1"
                                    android:id="@+id/tv_JoinedWithTeam"
                                    android:layout_marginTop="2dp"
                                    android:textSize="14sp"
                                    android:textColor="@color/textColor"
                                    android:textStyle="bold"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:visibility="gone"
                                android:id="@+id/LL_ShareContest"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/invite_friends_in_this_contest"
                                    android:textSize="13sp"
                                    android:textColor="#858585"
                                    />
                                <TextView
                                    android:id="@+id/tv_ShareContest"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/dark_rectangle"
                                    android:paddingBottom="5dp"
                                    android:paddingTop="5dp"
                                    android:paddingRight="20dp"
                                    android:paddingLeft="20dp"
                                    android:text="@string/invite"
                                    android:layout_marginTop="5dp"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"
                                    android:textSize="13sp"
                                    android:visibility="visible" />
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/team_header"
                android:id="@+id/RL_LeaderboardList"
                android:layout_below="@+id/Rl_ContestDetails"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:id="@+id/tv_TotalJoinedTeamCount"
                    android:text="Teams"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:text="RANK"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"/>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Rv_MyFixLeaderboard"
                android:layout_below="@+id/RL_LeaderboardList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
</layout>